compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_module_suggest_typo_for_imported_module.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport wibble\npub fn main() {\n  wible.wobble()\n}\n"
---
----- SOURCE CODE
-- wibble.rakun
pub fn wobble() {}

-- main.rakun

import wibble
pub fn main() {
  wible.wobble()
}


----- ERROR
error: Unknown module
  ┌─ /src/one/two.rakun:4:3
  │
4 │   wible.wobble()
  │   ^^^^^

No module has been found with the name `wible`.
Hint: Did you mean `wibble`?
